--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -17,7 +17,7 @@
     <img src="assets/img/Columbus logo name.png" alt="ionic logo">
   </div>
   <div padding class="about-info">
-    <h4>Columbus</h4>
+    <h1><b>Columbus</b></h1>
     <p><b>Project 3: Journey Sharing</b>
       The goal of this project is to develop an app for travellers to find compatible fellow-travellers to share a journey with two modes.
       One mode is a search for travellers to share a daily commute. The second mode is to find compatible travellers in real-time.
@@ -36,12 +36,13 @@
     </p>
 
       <p>
-      Presented by:
+        <b>Presented by:</b>
       <ion-list>
-       <p>Amit Prasad </p>
-       <p>Ashish Lochan</p>
-       <p>Rahul Agrahari</p>
+        <p>Amit Prasad </p>
+        <p>Ashish Lochan</p>
+        <p>Rahul Agrahari</p>
         <P>Xu Zheng</P>
+        <P>Tianyang</P>
 
       </ion-list>
       </p>
