--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -28,7 +28,7 @@ Ionic pages and navigation.
         </ion-col>
         <ion-col>
           <div class="searchBtn">
-            <button ion-button icon-left clear (click)="setCurrentPositionforSrc()">
+            <button ion-button icon-left clear (click)="displayCurrentLocation()">
               <ion-icon name="locate" style=" color: #fd7272"></ion-icon>
             </button>
           </div>
