--- a/src/pages/alltrips/alltrips.html
+++ b/src/pages/alltrips/alltrips.html
@@ -5,19 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header margin-bottom="20px">
-
-
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>All Trips</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content *ngIf="isLoaded" padding>
+<ion-content *ngIf="isLoaded" >
   <ion-row>
     <ion-col col-10 no-padding>
       <ion-searchbar id="txtHome"  placeholder="Search by Destination" no-border no-lines></ion-searchbar>
@@ -31,7 +28,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-list [virtualScroll]="tripdata" approxItemHeight="500px">
+  <ion-list [virtualScroll]="tripdata" approxItemHeight="450px">
 
     <ion-item *virtualItem="let trip">
 
