--- a/src/pages/matched-trips/matched-trips.html
+++ b/src/pages/matched-trips/matched-trips.html
@@ -41,8 +41,8 @@
             <ion-col><b>Start Time:</b> {{trip.preferences[4].value}}</ion-col>
           </ion-row>
           <ion-row>
-            <ion-col><b>Source:</b> {{trip.tripStops[0].location}}, {{trip.tripStops[0].location}}</ion-col>
-            <ion-col><b>Destination:</b> {{trip.tripStops[1].location}}, {{trip.tripStops[1].location}}</ion-col>
+            <ion-col><b>Source:</b> {{trip.tripStops[0].coordinate.lat}}, {{trip.tripStops[0].coordinate.lng}}</ion-col>
+            <ion-col><b>Destination:</b> {{trip.tripStops[1].coordinate.lat}}, {{trip.tripStops[1].coordinate.lng}}</ion-col>
           </ion-row>
           <ion-row>
             <ion-col>
