--- a/src/pages/matched-trips/matched-trips.html
+++ b/src/pages/matched-trips/matched-trips.html
@@ -36,7 +36,7 @@
           <b>Preferences</b>
         </ion-card-header>
 
-        <ion-card-content>
+        <ion-card-content text-wrap="2">
           <ion-row>
             <ion-col><b>Start Time:</b> {{trip.preferences[4].value}}</ion-col>
           </ion-row>
