--- a/src/pages/homepage/homepage.html
+++ b/src/pages/homepage/homepage.html
@@ -24,7 +24,7 @@ Ionic pages and navigation.
     <ion-item class="searchBars" no-lines>
       <ion-row>
         <ion-col col-11>
-          <ion-searchbar id="txtHome1" placeholder="Source"></ion-searchbar>
+          <ion-searchbar id="txtHome" placeholder="Source"></ion-searchbar>
         </ion-col>
         <ion-col>
           <div class="searchBtn">
@@ -36,7 +36,7 @@ Ionic pages and navigation.
       </ion-row>
       <ion-row>
         <ion-col col-11 no-padding>
-          <ion-searchbar id="txtHome" placeholder="Destination"></ion-searchbar>
+          <ion-searchbar id="txtHome1" placeholder="Destination"></ion-searchbar>
           <!--<ion-input id="txtHome" type="text"></ion-input>-->
         </ion-col>
       </ion-row>
